// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cve certs expiring certs 1`] = `
Array [
  Object {
    "actions": Array [],
    "cpe": null,
    "createdAt": true,
    "cve": null,
    "cvss": null,
    "cwe": null,
    "description": "This domain's SSL certificate is expiring / has expired at 2019-04-22T10:20:30.000Z. Please make sure its certificate is renewed, or users may face SSL errors when trying to navigate to the site.",
    "id": true,
    "isKev": false,
    "kevResults": Object {},
    "lastSeen": true,
    "needsPopulation": false,
    "notes": "",
    "references": Array [],
    "severity": "High",
    "source": "certs",
    "state": "open",
    "structuredData": Object {},
    "substate": "unconfirmed",
    "title": "Expiring SSL certificate",
    "updatedAt": true,
  },
]
`;

exports[`cve certs invalid certs 1`] = `
Array [
  Object {
    "actions": Array [],
    "cpe": null,
    "createdAt": true,
    "cve": null,
    "cvss": null,
    "cwe": null,
    "description": "This domain's SSL certificate is invalid. Please make sure its certificate is properly configured, or users may face SSL errors when trying to navigate to the site.",
    "id": true,
    "isKev": false,
    "kevResults": Object {},
    "lastSeen": true,
    "needsPopulation": false,
    "notes": "",
    "references": Array [],
    "severity": "Low",
    "source": "certs",
    "state": "open",
    "structuredData": Object {},
    "substate": "unconfirmed",
    "title": "Invalid SSL certificate",
    "updatedAt": true,
  },
]
`;

exports[`cve product with IIS cpe cpe:/a:microsoft:iis:2.5 should include alternate cpes defined in productMap: execSync.input 1`] = `
"0 cpe:/a:microsoft:iis:2.5,cpe:/a:microsoft:internet_information_services:2.5
"
`;

exports[`cve product with IIS cpe cpe:/a:microsoft:internet_information_server should include alternate cpes defined in productMap: execSync.input 1`] = `
"0 cpe:/a:microsoft:internet_information_server:7.5,cpe:/a:microsoft:internet_information_services:7.5
"
`;

exports[`cve product with IIS cpe cpe:/a:microsoft:internet_information_server:8.5 should include alternate cpes defined in productMap: execSync.input 1`] = `
"0 cpe:/a:microsoft:internet_information_server:8.5,cpe:/a:microsoft:internet_information_services:8.5
"
`;

exports[`cve product with cpe with trailing colon: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker::1.0.0
"
`;

exports[`cve product with cpe with version in it: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve product with cpe without version in it: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve product with exchange cpe with version in it: execSync.input 1`] = `
"0 cpe:/a:microsoft:exchange_server:2019:cumulative_update_5
"
`;

exports[`cve simple test: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve simple test: vulnerability 1`] = `
Object {
  "actions": Any<Array>,
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-10866",
  "cvss": "9.8",
  "cwe": "CWE-89",
  "description": "Test description",
  "id": Any<String>,
  "isKev": false,
  "kevResults": Object {},
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "needsPopulation": false,
  "notes": "",
  "references": Array [
    Object {
      "name": "https://example.com",
      "source": "CONFIRM",
      "tags": Array [
        "Patch",
        "Vendor Advisory",
      ],
      "url": "https://example.com",
    },
  ],
  "severity": "Critical",
  "source": "cpe2cve",
  "state": "open",
  "structuredData": Object {},
  "substate": "unconfirmed",
  "title": "CVE-2019-10866",
  "updatedAt": Any<Date>,
}
`;

exports[`cve simple test: vulnerability 2`] = `
Object {
  "actions": Any<Array>,
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-11590",
  "cvss": "8.8",
  "cwe": "CWE-352",
  "description": "",
  "id": Any<String>,
  "isKev": false,
  "kevResults": Object {},
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "needsPopulation": true,
  "notes": "",
  "references": Array [],
  "severity": "High",
  "source": "cpe2cve",
  "state": "open",
  "structuredData": Object {},
  "substate": "unconfirmed",
  "title": "CVE-2019-11590",
  "updatedAt": Any<Date>,
}
`;
